--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "^4.1.1",
     "config": "^4.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
